Bug 357618 - scrolling with xf86-input-libinput is unusable slow - only in dolphin
Summary: scrolling with xf86-input-libinput is unusable slow - only in dolphin
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 15.12.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
: 356481 358080 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-01-06 13:00 UTC by FabiB
Modified: 2016-12-30 12:34 UTC (History)
12 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description FabiB 2016-01-06 13:00:13 UTC
shen you're using xf86-input-libinput instead of other input systems for X11, scrolling in dolphin is that slow that you dont wanna use it anymore. for now it seems to be the only app that is effected.
other framework5 things like gwenview, kmail, as well as Qt5 apps like tomahawk-qt and even other toolkit things like inkscape, gimp, chrome/ium firefox scroll in the same way as always

Reproducible: Always

Steps to Reproduce:
1. install xf86-input-libinput (and activate, if not by default)
2. restart PC
3. open dolphin and scroll

Actual Results:  
it is now slow ....

Expected Results:  
should be the same as in all other apps

/usr/share/X11/xorg.conf.d/90-libinput.conf


# Match on all types of devices but tablet devices and joysticks
Section "InputClass"
        Identifier "libinput pointer catchall"
        MatchIsPointer "on"
        MatchDevicePath "/dev/input/event*"
        Driver "libinput"
EndSection

Section "InputClass"
        Identifier "libinput keyboard catchall"
        MatchIsKeyboard "on"
        MatchDevicePath "/dev/input/event*"
        Driver "libinput"
EndSection

Section "InputClass"
        Identifier "libinput touchpad catchall"
        MatchIsTouchpad "on"
        MatchDevicePath "/dev/input/event*"
        Driver "libinput"
EndSection

Section "InputClass"
        Identifier "libinput touchscreen catchall"
        MatchIsTouchscreen "on"
        MatchDevicePath "/dev/input/event*"
        Driver "libinput"
EndSection
Comment 1 Christoph Feck 2016-01-13 21:02:31 UTC
Can you check if the commit from https://git.reviewboard.kde.org/r/126718/ fixes the issue?
Comment 2 Emmanuel Pescosta 2016-01-14 14:59:24 UTC
(In reply to Christoph Feck from comment #1)
> Can you check if the commit from https://git.reviewboard.kde.org/r/126718/
> fixes the issue?

No I doesn't fix the issue, only changed the non-pixelDelta case.
Comment 3 Emmanuel Pescosta 2016-01-14 15:00:42 UTC
Looks like the bug is somewhere deeper.

https://bugzilla.redhat.com/show_bug.cgi?id=1220101
https://bugs.kde.org/show_bug.cgi?id=355410
Comment 4 Shlomi Fish 2016-01-14 17:16:07 UTC
I am affected by it as well here on Mageia x86-64 v6.
Comment 5 Emmanuel Pescosta 2016-01-16 16:39:46 UTC
*** Bug 358080 has been marked as a duplicate of this bug. ***
Comment 6 Larry 2016-01-16 21:03:38 UTC
Does Fedora 23 use the xf86-input-libinput driver?  If not, Bug 358080 isn't a duplicate of this though they may be related.  I see the same symptom when using the mousewheel in the widgets list which may be another difference.
Comment 7 Łukasz Żarnowiecki 2016-04-10 23:18:34 UTC
Possibly related to Bug 358765
Comment 8 John Choate 2016-05-18 20:14:35 UTC
Has a solution to this been found?? I'm still seeing this in Dolphin 16.04.1, KDE Frameworks 5.22.0, and QT 5.6.0 (built against 5.6.0), Mageia 6 (Cauldron).
Comment 9 Łukasz Żarnowiecki 2016-05-18 20:52:16 UTC
Use xf86-input-evdev until fixed.
Comment 10 H.H. 2016-06-09 09:49:01 UTC
@Lukasz: how do I use "xf86-input-evdev" instead of libinput? both are installed.
Comment 11 FabiB 2016-06-09 11:15:34 UTC
(In reply to H.H. from comment #10)
> both are installed.

uninstall xf86-input-libinput
Comment 12 H.H. 2016-06-20 09:57:33 UTC
> uninstall xf86-input-libinput

thanks, that workaround works.
Comment 13 H.H. 2016-07-09 08:07:28 UTC
Also the mouse-speed setting is ignored (pointer acceleration)
Comment 14 Martin Sandsmark 2016-07-12 22:34:43 UTC
https://git.reviewboard.kde.org/r/128432/
Comment 15 Martin Sandsmark 2016-07-16 16:47:39 UTC
Git commit f688bcd1f14175f1624e2abcc6452882448467c0 by Martin T. H. Sandsmark.
Committed on 16/07/2016 at 16:47.
Pushed by sandsmark into branch 'master'.

Fix scrolling on hidpi screens

Scrolling with libinput was unbearably slow.

QScrollBar is much better at scrolling than us, so let it handle it.

REVIEW: 128432

M  +1    -21   src/kitemviews/kitemlistcontainer.cpp
M  +5    -20   src/kitemviews/private/kitemlistsmoothscroller.cpp
M  +5    -7    src/kitemviews/private/kitemlistsmoothscroller.h

http://commits.kde.org/dolphin/f688bcd1f14175f1624e2abcc6452882448467c0
Comment 16 Martin Sandsmark 2016-07-16 17:02:27 UTC
Git commit 8d61c9c7b6f5a97803bf154529b413ee69bc2a1c by Martin T. H. Sandsmark.
Committed on 16/07/2016 at 17:01.
Pushed by sandsmark into branch 'Applications/16.08'.

Fix scrolling on hidpi screens

Scrolling with libinput was unbearably slow.

QScrollBar is much better at scrolling than us, so let it handle it.

REVIEW: 128432

M  +1    -21   src/kitemviews/kitemlistcontainer.cpp
M  +5    -20   src/kitemviews/private/kitemlistsmoothscroller.cpp
M  +5    -7    src/kitemviews/private/kitemlistsmoothscroller.h

http://commits.kde.org/dolphin/8d61c9c7b6f5a97803bf154529b413ee69bc2a1c
Comment 17 Shlomi Fish 2016-07-16 19:56:25 UTC
Thanks for the fix, Martin [and all]!
Comment 18 FabiB 2016-07-17 11:29:07 UTC
Seems to be not completeley fixed. the sidebars "places" and "folders" are still slow while scrolling for me, with latest git.
Comment 19 Larry 2016-07-31 12:33:40 UTC
(In reply to Lukasz from comment #9)
> Use xf86-input-evdev until fixed.

Finally removed xorg-x11-drv-libinput (dnf remove xorg-x11-drv-libinput) and all mouse-wheel scrolling issues are resolved.
Comment 20 Rindert Vonk 2016-09-09 16:06:49 UTC
(In reply to FabiB from comment #18)
> Seems to be not completeley fixed. the sidebars "places" and "folders" are
> still slow while scrolling for me, with latest git.

For me as well. I have not installed xf86-input-libinput
Version 16.08.1
Comment 21 Martin Schnitkemper 2016-09-24 09:17:36 UTC
It's not solved for me.  I have also not installed xf86-input-libinput on my desktop system but scrolling in the left folder- or places panel in dolphin is still unusable slow, in the main windows its OK.  It seems new to me after upgrading to 16.08.  Distribution is Arch Linux.
Comment 22 Shlomi Fish 2016-09-24 11:57:30 UTC
Hi all,

(In reply to Martin Schnitkemper from comment #21)
> It's not solved for me.  I have also not installed xf86-input-libinput on my
> desktop system but scrolling in the left folder- or places panel in dolphin
> is still unusable slow, in the main windows its OK.  It seems new to me
> after upgrading to 16.08.  Distribution is Arch Linux.

please see this Mageia bug - https://bugs.mageia.org/show_bug.cgi?id=19362 - scrolling is low in dolphin on non-Plasma5-desktops without libinput installed.
Comment 23 Rindert Vonk 2016-09-24 16:06:15 UTC
(In reply to Shlomi Fish from comment #22)
> Hi all,
> 
> (In reply to Martin Schnitkemper from comment #21)
> > It's not solved for me.  I have also not installed xf86-input-libinput on my
> > desktop system but scrolling in the left folder- or places panel in dolphin
> > is still unusable slow, in the main windows its OK.  It seems new to me
> > after upgrading to 16.08.  Distribution is Arch Linux.
> 
> please see this Mageia bug - https://bugs.mageia.org/show_bug.cgi?id=19362 -
> scrolling is low in dolphin on non-Plasma5-desktops without libinput
> installed.

I have the same problem as Martin. I'm also using arch distro as well. libinput is installed (it is a qt5-base dependency). But I have not installed xf86-input-libinput.
I'm using dolphin inside plasma-5 desktop, kde applications and kde frameworks (KDE is default at my system).
Comment 24 Elvis Angelaccio 2016-12-10 13:48:26 UTC
*** Bug 356481 has been marked as a duplicate of this bug. ***
Comment 25 Martin Schnitkemper 2016-12-30 12:34:51 UTC
After latest system update it works for me again, I can scroll in both panels with normal speed.  

I don't know which of the components exactly solved the problem since I got a whole bunch of updates of KDE Plasma 5.8.5 and the KDE Applications 16.12.