Fix scrolling on hidpi screens

Scrolling with libinput was unbearably slow.

QScrollBar is much better at scrolling than us, so let it handle it.

REVIEW: 128432
BUG: 357618